# cmpt433a4

./: README.md
linux/: CMakeLists.txt
linux/app/: CMakeLists.txt
linux/app/include/: drumBeats.h  game.h  lcd.h  server.h  terminal.h
linux/app/src/: drumBeats.c  game.c  lcd.c  main.c  server.c  terminal.c
linux/beatbox-server-copy/: server.js
linux/beatbox-server-copy/lib/: beatbox_server.js
linux/beatbox-server-copy/public/: index.html
linux/beatbox-server-copy/public/javascripts/: beatbox_ui.js
linux/common/: CMakeLists.txt
linux/common/include/common/: periodTimer.h  shutdown.h  timing.h
linux/common/src/: periodTimer.c  shutdown.c  timing.c
linux/hal/: CMakeLists.txt
linux/hal/include/hal/: accelerometer.h  audioMixer.h  gpio.h  i2c.h  joystick.h  joystickBtn.h  neopixelR5.h  rotaryEncoder.h  rotaryEncoderBtn.h
linux/hal/src/: accelerometer.c  audioMixer.c  gpio.c  i2c.c  joystick.c  joystickBtn.c  neopixelR5.c  rotaryEncoder.c  rotaryEncoderBtn.c
neopixel/: CMakeLists.txt  load_r5_mcu.sh  r5_mcu_build.sh
neopixel/src/: main.c
old/: sharedDataLayout.h  sharedMem-Linux.c
r5/: load_r5_mcu.sh
r5/src/: main.c  sharedDataLayout.h
sharedMem-to-merge/linux/: sharedMem-Linux.c
sharedMem-to-merge/r5/: r5_mcu_build.sh
sharedMem-to-merge/r5/boards/old/: beagley_ai_j722s_main_r5f0_0.overlay  beagley_ai_j722s_mcu_r5f0_0 copy.overlay_BACKUP  beagley_ai_j722s_mcu_r5f0_0.overlay
sharedMem-to-merge/r5/src/: main.c  sharedDataLayout.h
sharedMem/sharedMem-Linux/: sharedMem-Linux.c
sharedMem/sharedMem-R5/: CMakeLists.txt  load_r5_mcu.sh
sharedMem/sharedMem-R5/boards/: beagley_ai_j722s_mcu_r5f0_0.overlay
sharedMem/sharedMem-R5/src/: main.c
shareddemo/linux/: Makefile
shareddemo/r5/boards/old/: UNUSED - beagley_ai_j722s_mcu_r5f0_0_2.overlay
shareddemo/r5/src/: main.c
